--- a/kalkulator/style.css
+++ b/kalkulator/style.css
@@ -1,89 +1,84 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 30px;
+  user-select: none;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 body {
-  background-color: #000;
+  display: grid;
+  place-items: center;
+  background: #dde1e7;
 }
 
-.container {
-  width: 300px;
-  height: 430px;
-  margin: 50px auto;
-  border-radius: 20px;
-  border: 1px solid aqua;
-  box-sizing: border-box;
-  z-index: -99999;
-  background-color: #000;
-  box-shadow: 0 0 10px aqua;
-}
-
-.header {
-  width: 90%;
-  height: 68px;
-  margin: 20px auto;
+.calculator {
+  width: 330px;
+  background: #dde1e7;
+  padding: 40px 30px;
   border-radius: 10px;
-  border: 1px solid aqua;
-  z-index: 2;
-  background-color: white;
-  box-shadow: 0 0 10px aqua;
+  box-shadow: -3px -3px 7px #ffffff73,
+    2px 2px 5px rgba(94, 104, 121, 0.288);
+  position: relative;
 }
 
-.body {
-  margin: 5px auto;
-  width: 90%;
-  display: flex;
-  height: 300px;
-  box-sizing: border-box;
-  flex-wrap: wrap;
-}
-
-.baris1,
-.baris2,
-.baris3,
-.baris4,
-.baris5 {
-  display: flex;
+form .result {
+  height: 60px;
   width: 100%;
-  margin-bottom: 5px;
-  justify-content: space-between;
+  background: #dde1e7;
+  border-radius: 5px;
+  box-shadow: inset -3px -3px 7px #ffffff73,
+    inset 2px 2px 5px rgba(94, 104, 121, 0.288);
 }
 
-button {
-  margin-right: 5px;
-  transition: 0.5s;
-}
-button:hover {
-  box-shadow: 0 0 15px aqua;
-  transform: scale(1.1);
-}
-
-.baris1 #c {
-  flex: 3;
-}
-
-.baris1 #tombol {
-  flex: 1;
+.result input {
+  width: 100%;
+  height: 100%;
+  background: none;
+  border: none;
+  outline: none;
+  font-size: 30px;
+  font-weight: 500;
+  padding: 0 20px;
+  font-family: 'Poppins', sans-serif;
+  text-align: right;
+  color: #595959;
+  pointer-events: none;
 }
 
-.baris2 #tombol {
-  flex: 1;
+form .buttons {
+  text-align: center;
+  padding: 30px 0 0 0;
 }
 
-.baris3 #tombol {
-  flex: 1;
+.buttons input[type="button"] {
+  width: 56px;
+  height: 56px;
+  font-size: 23px;
+  margin: 4px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  color: #595959;
+  background: #dde1e7;
+  box-shadow: -3px -3px 7px #ffffff73,
+    2px 2px 5px rgba(94, 104, 121, 0.288);
 }
 
-.baris4 #tombol {
-  flex: 1;
+.buttons input[type="button"]:focus {
+  box-shadow: inset -3px -3px 7px #ffffff73,
+    inset 2px 2px 5px rgba(94, 104, 121, 0.288);
+  transform: scale(0.9);
+  color: #3498db;
 }
 
-.baris5 #nol {
-  flex: 1;
-}
-
-.baris5 #hasil {
-  flex: 1;
+p {
+  position: absolute;
+  color: #595959;
+  margin-top: 10px;
+  margin-left: 5px;
 }
