--- a/kalkulator/style.css
+++ b/kalkulator/style.css
@@ -21,8 +21,8 @@ body {
   background: #dde1e7;
   padding: 40px 30px;
   border-radius: 10px;
-  box-shadow: -3px -3px 7px #ffffff73,
-    2px 2px 5px rgba(94, 104, 121, 0.288);
+  box-shadow: -3px -3px 7px #ffffff73, 
+              2px 2px 5px rgba(94, 104, 121, 0.288);
   position: relative;
 }
 
@@ -44,7 +44,7 @@ form .result {
   font-size: 30px;
   font-weight: 500;
   padding: 0 20px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   text-align: right;
   color: #595959;
   pointer-events: none;
@@ -65,8 +65,7 @@ form .buttons {
   border-radius: 5px;
   color: #595959;
   background: #dde1e7;
-  box-shadow: -3px -3px 7px #ffffff73,
-    2px 2px 5px rgba(94, 104, 121, 0.288);
+  box-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);
 }
 
 .buttons input[type="button"]:focus {
