--- a/kalkulator/style.css
+++ b/kalkulator/style.css
@@ -65,7 +65,8 @@ form .buttons {
   border-radius: 5px;
   color: #595959;
   background: #dde1e7;
-  box-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);
+  box-shadow: -3px -3px 7px #ffffff73, 
+              2px 2px 5px rgba(94, 104, 121, 0.288);
 }
 
 .buttons input[type="button"]:focus {
